--- a/public/index.html
+++ b/public/index.html
@@ -32,12 +32,12 @@
     <meta property="og:image" content="https://ohpotatocoin.netlify.app/ohpotato.png">
     <meta property="og:image:width" content="800" />
     <meta property="og:image:height" content="800" />
-    <meta property="og:url" content="https://ohpotatocoin.netlify.app/">
+    <meta property="og:url" content="https://ohpotatocoin.netlify.app/" />
 
-    <meta name="twitter:title" content="Ohpotatocoin 오감자코인">
-    <meta name="twitter:description" content="오감자 코인을 한번 사용해보세요!! 나중에 떡상하여 도지코인을 넘을지는 아무도 모르니까요 ㅋ.ㅋ?">
-    <meta name="twitter:image" content="https://ohpotatocoin.netlify.app/ohpotato.png">
-    <meta name="twitter:domain" content="오감자 코인 ...">
+    <meta name="twitter:title" content="Ohpotatocoin 오감자코인" />
+    <meta name="twitter:description" content="오감자 코인을 한번 사용해보세요!! 나중에 떡상하여 도지코인을 넘을지는 아무도 모르니까요 ㅋ.ㅋ?" />
+    <meta name="twitter:image" content="https://ohpotatocoin.netlify.app/ohpotato.png" />
+    <meta name="twitter:domain" content="오감자 코인 ..." />
     <link rel="icon" href="%PUBLIC_URL%/ohpotato/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -46,22 +46,22 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />  -->
-    <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/ohpotato/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="%PUBLIC_URL%/ltter/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="%PUBLIC_URL%/ohpotato/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/ohpotato/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="%PUBLIC_URL%/ohpotato/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/ohpotato/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/ohpotato/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/ohpotato/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/ohpotato/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="%PUBLIC_URL%/ohpotato/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/ohpotato/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/ohpotato/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/ohpotato/favicon-16x16.png">
-    <link rel="manifest" href="%PUBLIC_URL%/ohpotato/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="%PUBLIC_URL%/ohpotato/ms-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/ohpotato/apple-icon-57x57.png" /> 
+    <link rel="apple-touch-icon" sizes="60x60" href="%PUBLIC_URL%/ltter/apple-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="%PUBLIC_URL%/ohpotato/apple-icon-72x72.png" /> 
+    <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/ohpotato/apple-icon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="%PUBLIC_URL%/ohpotato/apple-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/ohpotato/apple-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/ohpotato/apple-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/ohpotato/apple-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/ohpotato/apple-icon-180x180.png" />
+    <link rel="icon" type="image/png" sizes="192x192"  href="%PUBLIC_URL%/ohpotato/android-icon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/ohpotato/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/ohpotato/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/ohpotato/favicon-16x16.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/ohpotato/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="%PUBLIC_URL%/ohpotato/ms-icon-144x144.png" />
     <meta name="theme-color" content="#ffffff">
     <title>OhPotato 오감자 코인</title>
   </head>
