--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,9 @@
     <meta name="twitter:domain" content="오감자 코인 ..." />
     <link rel="icon" href="%PUBLIC_URL%/ohpotato/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="naver-site-verification" content="d4c37e1cbc797bd05584763e80898bdff9ae03e4" />
+    <meta name="google-site-verification" content="bDHDfGJqVHKGkYnuyE8-TazZt7Qa2ml1JiyLYfQDhTo" />
+    
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
       manifest.json provides metadata used when your web app is installed on a
